--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "release:prepare": "npm version patch -m \"Release: %s\""
   },
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-image-data-uri": "^1.2.2",
+    "gulp-inline-fonts": "^1.0.4",
     "handlebars": "^4.0.11",
     "helper-markdown": "^1.0.0",
     "moment": "^2.19.4"
