--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "jsonresume-theme-kards",
-  "version": "1.0.2",
+  "name": "jsonresume-theme-loodse",
+  "version": "1.0.2-loodse",
   "description": "Theme for JSON Resume based on Kards design by styleshout",
-  "author": "XuluWarrior",
+  "author": "toschneck",
   "repository": {
     "type": "git",
-    "url": "https://github.com/XuluWarrior/jsonresume-theme-kards.git"
+    "url": "https://github.com/loodse/jsonresume-theme-kards.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/XuluWarrior/jsonresume-theme-kards/issues"
+    "url": "https://github.com/loodse/jsonresume-theme-kards/issues"
   },
-  "homepage": "https://github.com/XuluWarrior/jsonresume-theme-kards",
+  "homepage": "https://github.com/loodse/jsonresume-theme-kards",
   "scripts": {
     "build:styles": "lessc Kards10/less/styles.less Kards10/css/styles.css",
     "release:prepare": "git checkout master && git pull && npm version patch -m \"Release: %s\"",
