--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonresume-theme-loodse",
-  "version": "1.0.2-loodse",
+  "version": "1.0.2",
   "description": "Theme for JSON Resume based on Kards design by styleshout",
   "author": "toschneck",
   "repository": {
